@@ -1,0 +1,5 @@
+$NetBSD: distinfo,v 1.1.1.1 2007/06/10 11:41:09 abs Exp $
+
+SHA1 (Data-OptList-0.101.tar.gz) = fbdc003b01f89f4c97725d449efe220b757d8d20
+RMD160 (Data-OptList-0.101.tar.gz) = 42923debe39faa51cabbb6baba13fa1d2107623d
+Size (Data-OptList-0.101.tar.gz) = 13769 bytes
